--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,7 +13,7 @@
 :root{
   --blk: #1d1d1f;
   --sblk: #101011;
-  --wht: #f5f5f7;
+  --wht: #f7f5f5;
 }
 
 html,body{
@@ -47,6 +47,7 @@ body.bgcolor{
 
 #logo{
   animation: fill 0.5s ease forwards 3.5s;
+  width: 80%;
 }
 
 #logo path:nth-child(1){
@@ -127,6 +128,7 @@ body.bgcolor{
     align-items: center;
     padding: .5rem;
     transition: all 1s;
+    z-index: 10;
     /* color: var(--wht); */
   }
 
@@ -456,10 +458,31 @@ a{
   color: var(--wht);
 }
 
+@media(max-width: 1024px){
+  #navbar{
+    margin: 1rem 5%;
+  }
+
+  #sticky{
+    display: none;
+  }
+}
+
 /* ---------------------------------------------------------------------------------BRAND NAME--------------------------------------------------------------------------------------------------- */
 
+main{
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 #brand-name{
-  height: 64.5vh;
+  width: 80%;
   display: flex;
   justify-content: center;
   align-items: center;
